chore: modernize syntax. fix property mapping bugs