@@ -20,7 +20,6 @@
 package org.apache.airavata.helix.task.submission;
 
 import java.io.File;
-import java.nio.file.Paths;
 import java.util.Map;
 import org.apache.airavata.common.model.JobManagerCommand;
 
@@ -74,7 +73,7 @@ public class HTCondorJobConfiguration implements JobManagerConfiguration {
     public RawCommandInfo getSubmitCommand(String workingDirectory, String pbsFilePath) {
         return new RawCommandInfo(this.installedPath
                 + jMCommands.get(JobManagerCommand.SUBMISSION).trim() + " " + workingDirectory + File.separator
-                + Paths.get(pbsFilePath).getFileName().toString());
+                + java.nio.file.Path.of(pbsFilePath).getFileName().toString());
     }
 
     public String getInstalledPath() {
