@@ -20,7 +20,6 @@
 package org.apache.airavata.helix.task.submission;
 
 import java.io.File;
-import java.nio.file.Paths;
 import java.util.Map;
 import org.apache.airavata.common.model.JobManagerCommand;
 
@@ -70,7 +69,7 @@ public class UGEJobConfiguration implements JobManagerConfiguration {
 
     public RawCommandInfo getSubmitCommand(String workingDirectory, String pbsFilePath) {
         return new RawCommandInfo(this.installedPath + "qsub " + workingDirectory + File.separator
-                + Paths.get(pbsFilePath).getFileName().toString());
+                + java.nio.file.Path.of(pbsFilePath).getFileName().toString());
     }
 
     public String getInstalledPath() {
