@@ -58,7 +58,7 @@ import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
 
 @Component
-@ConditionalOnProperty(name = "security.iam.enabled", havingValue = "true", matchIfMissing = true)
+@ConditionalOnProperty(prefix = "security.iam", name = "enabled", havingValue = "true")
 public class KeyCloakSecurityManager implements AiravataSecurityManager {
     private static final Logger logger = LoggerFactory.getLogger(KeyCloakSecurityManager.class);
     // Methods that users user to manage their user resource profile
@@ -198,13 +198,13 @@ public class KeyCloakSecurityManager implements AiravataSecurityManager {
         String gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
         String action = "/airavata/" + metaData.get(Constants.API_METHOD_NAME);
         try {
-            if (!properties.security.tls.enabled) {
+            if (!properties.security().tls().enabled()) {
                 return true;
             }
             initServiceClients();
 
             boolean decision;
-            if (properties.security.authzCache.enabled) {
+            if (properties.security().authzCache().enabled()) {
                 var authzCacheManager = authzCacheManagerFactory.getAuthzCacheManager();
                 var cacheIndex = new AuthzCacheIndex(subject, gatewayId, accessToken, action);
                 var authzCachedStatus = authzCacheManager.getAuthzCachedStatus(cacheIndex);
@@ -316,10 +316,10 @@ public class KeyCloakSecurityManager implements AiravataSecurityManager {
 
     private void validateToken(String username, String token, String gatewayId) throws Exception {
         // Skip token validation if IAM is not configured (e.g., in test environments)
-        if (properties.security == null
-                || properties.security.iam == null
-                || properties.security.iam.serverUrl == null
-                || properties.security.iam.serverUrl.isEmpty()) {
+        if (properties.security() == null
+                || properties.security().iam() == null
+                || properties.security().iam().serverUrl() == null
+                || properties.security().iam().serverUrl().isEmpty()) {
             logger.debug("IAM server URL not configured, skipping token validation for username: {}", username);
             return;
         }
@@ -345,26 +345,20 @@ public class KeyCloakSecurityManager implements AiravataSecurityManager {
     }
 
     private String getOpenIDConfigurationUrl(String realm) {
-        return properties.security.iam.serverUrl + "/realms/" + realm + "/.well-known/openid-configuration";
+        return properties.security().iam().serverUrl() + "/realms/" + realm + "/.well-known/openid-configuration";
     }
 
     public String getFromUrl(String urlToRead, String token) throws Exception {
-        StringBuilder result = new StringBuilder();
-        URL url = new URL(urlToRead);
+        URL url = java.net.URI.create(urlToRead).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
         conn.setDoInput(true);
         if (token != null) {
-            String bearerAuth = "Bearer " + token;
-            conn.setRequestProperty("Authorization", bearerAuth);
+            conn.setRequestProperty("Authorization", "Bearer " + token);
         }
-        BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-        String line;
-        while ((line = rd.readLine()) != null) {
-            result.append(line);
+        try (BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
+            return rd.lines().collect(java.util.stream.Collectors.joining());
         }
-        rd.close();
-        return result.toString();
     }
 
     private String getTokenEndpoint(String gatewayId) throws Exception {
