@@ -31,7 +31,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.apache.airavata.accountprovisioning.InvalidSetupException;
 import org.apache.airavata.accountprovisioning.InvalidUsernameException;
 import org.apache.airavata.accountprovisioning.SSHAccountManager;
@@ -137,11 +136,11 @@ import org.apache.airavata.sharing.model.UserGroup;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnExpression;
+import org.apache.airavata.config.conditional.ConditionalOnApiService;
 import org.springframework.stereotype.Service;
 
 @Service
-@ConditionalOnExpression("${services.rest.enabled:false} == true || ${services.thrift.enabled:true} == true")
+@ConditionalOnApiService
 @ConditionalOnBean(org.apache.airavata.agents.api.AdaptorSupport.class)
 public class AiravataService {
     private static final Logger logger = LoggerFactory.getLogger(AiravataService.class);
@@ -351,7 +350,7 @@ public class AiravataService {
 
     private void postInitDefaultGateway()
             throws RegistryServiceException, CredentialStoreException, AiravataSystemException {
-        String defaultGateway = properties.airavata.defaultGateway;
+        String defaultGateway = properties.airavata().defaultGateway();
         if (defaultGateway == null || defaultGateway.isEmpty()) {
             logger.debug("No default gateway configured. Skipping gateway initialization.");
             return;
@@ -367,10 +366,10 @@ public class AiravataService {
 
             logger.debug("Starting to add password credential to default gateway={}", defaultGateway);
             var passwordCredential = new PasswordCredential();
-            passwordCredential.setPortalUserName(properties.security.iam.superAdmin.username);
+            passwordCredential.setPortalUserName(properties.security().iam().superAdmin().username());
             passwordCredential.setGatewayId(defaultGateway);
-            passwordCredential.setLoginUserName(properties.security.iam.superAdmin.username);
-            passwordCredential.setPassword(properties.security.iam.superAdmin.password);
+            passwordCredential.setLoginUserName(properties.security().iam().superAdmin().username());
+            passwordCredential.setPassword(properties.security().iam().superAdmin().password());
             passwordCredential.setDescription("Credentials for default gateway=" + defaultGateway);
             String token = null;
             logger.info("Creating password credential for default gateway={}", defaultGateway);
@@ -385,7 +384,7 @@ public class AiravataService {
     }
 
     private void initSharingRegistry() throws SharingRegistryException, DuplicateEntryException {
-        String defaultGateway = properties.airavata.defaultGateway;
+        String defaultGateway = properties.airavata().defaultGateway();
         if (!isDomainExists(defaultGateway)) {
             var domain = new Domain();
             domain.setDomainId(defaultGateway);
@@ -395,8 +394,8 @@ public class AiravataService {
 
             var user = new User();
             user.setDomainId(domain.getDomainId());
-            user.setUserId(properties.security.iam.superAdmin.username + "@" + defaultGateway);
-            user.setUserName(properties.security.iam.superAdmin.username);
+            user.setUserId(properties.security().iam().superAdmin().username() + "@" + defaultGateway);
+            user.setUserName(properties.security().iam().superAdmin().username());
             createUser(user);
 
             // Creating Entity Types for each domain
@@ -605,7 +604,7 @@ public class AiravataService {
         try {
             var accessibleProjIds = new ArrayList<String>();
             List<Project> result;
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var sharingFilters = new ArrayList<SearchCriteria>();
                 var searchCriteria = new SearchCriteria();
                 searchCriteria.setSearchField(EntitySearchField.ENTITY_TYPE_ID);
@@ -664,7 +663,7 @@ public class AiravataService {
         try {
             var project = getProject(projectId);
             var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
-            if (properties.airavata.sharing.enabled
+            if (properties.airavata().sharing().enabled()
                     && (!authzToken.getClaimsMap().get(Constants.USER_NAME).equals(project.getOwner())
                             || !authzToken
                                     .getClaimsMap()
@@ -749,7 +748,7 @@ public class AiravataService {
                 authzToken, airavataExperimentId, existingExperiment.getUserName(), existingExperiment.getGatewayId());
 
         // Update sharing entity if enabled
-        if (properties.airavata.sharing.enabled) {
+        if (properties.airavata().sharing().enabled()) {
             sharingManager.updateExperimentEntity(airavataExperimentId, experiment);
         }
 
@@ -1285,7 +1284,7 @@ public class AiravataService {
                     ApplicationSettingsException {
         try {
             String result = registerApplicationDeployment(gatewayId, applicationDeployment);
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var entity = new Entity();
                 entity.setEntityId(result);
                 final String domainId = gatewayId;
@@ -1322,7 +1321,7 @@ public class AiravataService {
     public ApplicationDeploymentDescription getApplicationDeployment(AuthzToken authzToken, String appDeploymentId)
             throws AuthorizationException, AiravataSystemException, InvalidRequestException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 final boolean hasAccess = userHasAccess(authzToken, appDeploymentId, ResourcePermissionType.READ);
                 if (!hasAccess) {
                     throw new AuthorizationException(
@@ -1355,7 +1354,7 @@ public class AiravataService {
             AuthzToken authzToken, String appDeploymentId, ApplicationDeploymentDescription applicationDeployment)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 final boolean hasAccess = userHasAccess(authzToken, appDeploymentId, ResourcePermissionType.WRITE);
                 if (!hasAccess) {
                     throw new AuthorizationException(
@@ -1385,7 +1384,7 @@ public class AiravataService {
     public boolean deleteApplicationDeployment(AuthzToken authzToken, String appDeploymentId)
             throws AuthorizationException, AiravataSystemException, InvalidRequestException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 final boolean hasAccess = userHasAccess(authzToken, appDeploymentId, ResourcePermissionType.WRITE);
                 if (!hasAccess) {
                     throw new AuthorizationException(
@@ -1558,7 +1557,7 @@ public class AiravataService {
         try {
             var userName = authzToken.getClaimsMap().get(Constants.USER_NAME);
             var accessibleAppDeploymentIds = new ArrayList<String>();
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 List<SearchCriteria> sharingFilters = new ArrayList<>();
                 var entityTypeFilter = new SearchCriteria();
                 entityTypeFilter.setSearchField(EntitySearchField.ENTITY_TYPE_ID);
@@ -1905,7 +1904,7 @@ public class AiravataService {
             AuthzToken authzToken, String gatewayId, String userName, int limit, int offset)
             throws AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 // user projects + user accessible projects
                 var accessibleProjectIds = new ArrayList<String>();
                 var filters = new ArrayList<SearchCriteria>();
@@ -1956,7 +1955,7 @@ public class AiravataService {
         try {
             String userName = authzToken.getClaimsMap().get(Constants.USER_NAME);
             List<String> accessibleAppDeploymentIds = new ArrayList<>();
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 List<SearchCriteria> sharingFilters = new ArrayList<>();
                 var entityTypeFilter = new SearchCriteria();
                 entityTypeFilter.setSearchField(EntitySearchField.ENTITY_TYPE_ID);
@@ -2749,19 +2748,19 @@ public class AiravataService {
         sharingRegistryService.shareEntityWithGroups(
                 domainId,
                 entity.getEntityId(),
-                Arrays.asList(gatewayGroups.getAdminsGroupId()),
+                List.of(gatewayGroups.getAdminsGroupId()),
                 domainId + ":MANAGE_SHARING",
                 true);
         sharingRegistryService.shareEntityWithGroups(
                 domainId,
                 entity.getEntityId(),
-                Arrays.asList(gatewayGroups.getAdminsGroupId()),
+                List.of(gatewayGroups.getAdminsGroupId()),
                 domainId + ":WRITE",
                 true);
         sharingRegistryService.shareEntityWithGroups(
                 domainId,
                 entity.getEntityId(),
-                Arrays.asList(gatewayGroups.getAdminsGroupId(), gatewayGroups.getReadOnlyAdminsGroupId()),
+                List.of(gatewayGroups.getAdminsGroupId(), gatewayGroups.getReadOnlyAdminsGroupId()),
                 domainId + ":READ",
                 true);
     }
@@ -2981,7 +2980,7 @@ public class AiravataService {
             throws InvalidRequestException, AiravataSystemException, ProjectNotFoundException, AuthorizationException {
         try {
             var existingProject = getProject(projectId);
-            if (properties.airavata.sharing.enabled
+            if (properties.airavata().sharing().enabled()
                             && !authzToken
                                     .getClaimsMap()
                                     .get(Constants.USER_NAME)
@@ -3019,7 +3018,7 @@ public class AiravataService {
             throws AiravataSystemException, ProjectNotFoundException, AuthorizationException {
         try {
             var existingProject = getProject(projectId);
-            if (properties.airavata.sharing.enabled
+            if (properties.airavata().sharing().enabled()
                             && !authzToken
                                     .getClaimsMap()
                                     .get(Constants.USER_NAME)
@@ -3051,7 +3050,7 @@ public class AiravataService {
             if (authzToken.getClaimsMap().get(Constants.USER_NAME).equals(project.getOwner())
                     && authzToken.getClaimsMap().get(Constants.GATEWAY_ID).equals(project.getGatewayId())) {
                 return project;
-            } else if (properties.airavata.sharing.enabled) {
+            } else if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!sharingRegistryService.userHasAccess(
@@ -3106,7 +3105,7 @@ public class AiravataService {
         try {
             var experimentModel = getExperiment(experimentId);
 
-            if (properties.airavata.sharing.enabled
+            if (properties.airavata().sharing().enabled()
                             && !authzToken
                                     .getClaimsMap()
                                     .get(Constants.USER_NAME)
@@ -3589,7 +3588,7 @@ public class AiravataService {
         String userName = authzToken.getClaimsMap().get(Constants.USER_NAME);
         validateGroupResourceProfile(authzToken, groupResourceProfile);
         String groupResourceProfileId = createGroupResourceProfile(groupResourceProfile);
-        if (properties.airavata.sharing.enabled) {
+        if (properties.airavata().sharing().enabled()) {
             try {
                 var entity = new Entity();
                 entity.setEntityId(groupResourceProfileId);
@@ -3699,7 +3698,7 @@ public class AiravataService {
         try {
             String userName = authzToken.getClaimsMap().get(Constants.USER_NAME);
             var accessibleGroupResProfileIds = new ArrayList<String>();
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var filters = new ArrayList<SearchCriteria>();
                 SearchCriteria searchCriteria = new SearchCriteria();
                 searchCriteria.setSearchField(EntitySearchField.ENTITY_TYPE_ID);
@@ -3783,7 +3782,7 @@ public class AiravataService {
             throws SharingRegistryException {
         return sharingRegistryService.searchEntities(domainId, userId, filters, offset, limit).stream()
                 .map(SharingEntity::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public boolean shareEntityWithGroups(
@@ -4472,7 +4471,7 @@ public class AiravataService {
     public GroupResourceProfile getGroupResourceProfile(AuthzToken authzToken, String groupResourceProfileId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":READ")) {
@@ -4489,7 +4488,7 @@ public class AiravataService {
             throws AuthorizationException, AiravataSystemException {
         try {
             var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":WRITE")) {
                     throw new AuthorizationException("User does not have permission to remove group resource profile");
@@ -4513,7 +4512,7 @@ public class AiravataService {
             AuthzToken authzToken, String computeResourceId, String groupResourceProfileId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":WRITE")) {
@@ -4530,7 +4529,7 @@ public class AiravataService {
     public boolean removeGroupComputeResourcePolicy(AuthzToken authzToken, String resourcePolicyId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 ComputeResourcePolicy computeResourcePolicy = getGroupComputeResourcePolicy(resourcePolicyId);
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
@@ -4552,7 +4551,7 @@ public class AiravataService {
     public boolean removeGroupBatchQueueResourcePolicy(AuthzToken authzToken, String resourcePolicyId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 BatchQueueResourcePolicy batchQueueResourcePolicy = getBatchQueueResourcePolicy(resourcePolicyId);
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
@@ -4575,7 +4574,7 @@ public class AiravataService {
             AuthzToken authzToken, String computeResourceId, String groupResourceProfileId)
             throws AuthorizationException, AiravataSystemException, InvalidRequestException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":READ")) {
@@ -4591,7 +4590,7 @@ public class AiravataService {
     public ComputeResourcePolicy getGroupComputeResourcePolicy(AuthzToken authzToken, String resourcePolicyId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 ComputeResourcePolicy computeResourcePolicy = getGroupComputeResourcePolicy(resourcePolicyId);
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
@@ -4612,7 +4611,7 @@ public class AiravataService {
     public BatchQueueResourcePolicy getBatchQueueResourcePolicy(AuthzToken authzToken, String resourcePolicyId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 BatchQueueResourcePolicy batchQueueResourcePolicy = getBatchQueueResourcePolicy(resourcePolicyId);
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
@@ -4651,7 +4650,7 @@ public class AiravataService {
             AuthzToken authzToken, String groupResourceProfileId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":READ")) {
@@ -4668,7 +4667,7 @@ public class AiravataService {
             AuthzToken authzToken, String groupResourceProfileId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":READ")) {
@@ -4685,7 +4684,7 @@ public class AiravataService {
             AuthzToken authzToken, String groupResourceProfileId)
             throws AuthorizationException, AiravataSystemException {
         try {
-            if (properties.airavata.sharing.enabled) {
+            if (properties.airavata().sharing().enabled()) {
                 var gatewayId = authzToken.getClaimsMap().get(Constants.GATEWAY_ID);
                 var userId = authzToken.getClaimsMap().get(Constants.USER_NAME);
                 if (!userHasAccess(gatewayId, userId + "@" + gatewayId, groupResourceProfileId, gatewayId + ":READ")) {
