@@ -22,13 +22,12 @@ package org.apache.airavata.service;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import org.apache.airavata.common.utils.AiravataUtils;
+import org.apache.airavata.common.utils.ServiceUtils;
 import org.apache.airavata.sharing.entities.EntityPK;
 import org.apache.airavata.sharing.entities.EntityTypePK;
 import org.apache.airavata.sharing.entities.GroupAdminPK;
@@ -66,11 +65,11 @@ import org.apache.airavata.sharing.utils.DBConstants;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnExpression;
+import org.apache.airavata.config.conditional.ConditionalOnApiService;
 import org.springframework.stereotype.Service;
 
 @Service
-@ConditionalOnExpression("${services.rest.enabled:false} == true || ${services.thrift.enabled:true} == true")
+@ConditionalOnApiService
 public class SharingRegistryService {
     private static final Logger logger = LoggerFactory.getLogger(SharingRegistryService.class);
 
@@ -157,44 +156,24 @@ public class SharingRegistryService {
     }
 
     public boolean isDomainExists(String domainId) throws SharingRegistryException {
-        try {
-            return domainService.isExists(domainId);
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while checking if domain exists: domainId=%s", domainId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        return ServiceUtils.executeBool(() -> domainService.isExists(domainId),
+            SharingRegistryException.class, "Error checking if domain exists: domainId=%s", domainId);
     }
 
     public boolean deleteDomain(String domainId) throws SharingRegistryException {
-        try {
-            domainService.delete(domainId);
-            return true;
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while deleting domain: domainId=%s", domainId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        ServiceUtils.executeVoid(() -> domainService.delete(domainId),
+            SharingRegistryException.class, "Error deleting domain: domainId=%s", domainId);
+        return true;
     }
 
     public Domain getDomain(String domainId) throws SharingRegistryException {
-        try {
-            return domainService.get(domainId);
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while getting domain: domainId=%s", domainId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        return ServiceUtils.execute(() -> domainService.get(domainId),
+            SharingRegistryException.class, "Error getting domain: domainId=%s", domainId);
     }
 
     public List<Domain> getDomains(int offset, int limit) throws SharingRegistryException {
-        try {
-            return domainService.getAll();
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while getting domains: offset=%d, limit=%d", offset, limit);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        return ServiceUtils.execute(() -> domainService.getAll(),
+            SharingRegistryException.class, "Error getting domains: offset=%d, limit=%d", offset, limit);
     }
 
     /**
@@ -229,7 +208,7 @@ public class SharingRegistryService {
             if (domain.getInitialUserGroupId() != null) {
                 addUsersToGroup(
                         user.getDomainId(),
-                        Collections.singletonList(user.getUserId()),
+                        List.of(user.getUserId()),
                         domain.getInitialUserGroupId());
             }
 
@@ -270,17 +249,12 @@ public class SharingRegistryService {
     }
 
     public boolean isUserExists(String domainId, String userId) throws SharingRegistryException {
-        try {
+        return ServiceUtils.executeBool(() -> {
             UserPK userPK = new UserPK();
             userPK.setDomainId(domainId);
             userPK.setUserId(userId);
             return userService.isExists(userPK);
-        } catch (SharingRegistryException e) {
-            String message =
-                    String.format("Error while checking if user exists: domainId=%s, userId=%s", domainId, userId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error checking if user exists: domainId=%s, userId=%s", domainId, userId);
     }
 
     public boolean deleteUser(String domainId, String userId) throws SharingRegistryException {
@@ -303,30 +277,20 @@ public class SharingRegistryService {
     }
 
     public User getUser(String domainId, String userId) throws SharingRegistryException {
-        try {
+        return ServiceUtils.execute(() -> {
             UserPK userPK = new UserPK();
             userPK.setUserId(userId);
             userPK.setDomainId(domainId);
             return userService.get(userPK);
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while getting user: domainId=%s, userId=%s", domainId, userId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error getting user: domainId=%s, userId=%s", domainId, userId);
     }
 
     public List<User> getUsers(String domain, int offset, int limit) throws SharingRegistryException {
-        try {
+        return ServiceUtils.execute(() -> {
             HashMap<String, String> filters = new HashMap<>();
             filters.put(DBConstants.UserTable.DOMAIN_ID, domain);
-            // Use Criteria API for dynamic filtering - simplified for now
             return userService.select(null, filters, offset, limit);
-        } catch (SharingRegistryException e) {
-            String message =
-                    String.format("Error while getting users: domain=%s, offset=%d, limit=%d", domain, offset, limit);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error getting users: domain=%s, offset=%d, limit=%d", domain, offset, limit);
     }
 
     /**
@@ -352,7 +316,7 @@ public class SharingRegistryService {
             }
             userGroupService.create(group);
 
-            addUsersToGroup(group.getDomainId(), Arrays.asList(group.getOwnerId()), group.getGroupId());
+            addUsersToGroup(group.getDomainId(), List.of(group.getOwnerId()), group.getGroupId());
             return group.getGroupId();
         } catch (SharingRegistryException e) {
             String message = String.format(
@@ -387,60 +351,40 @@ public class SharingRegistryService {
     }
 
     public boolean isGroupExists(String domainId, String groupId) throws SharingRegistryException {
-        try {
+        return ServiceUtils.executeBool(() -> {
             UserGroupPK userGroupPK = new UserGroupPK();
             userGroupPK.setDomainId(domainId);
             userGroupPK.setGroupId(groupId);
             return userGroupService.isExists(userGroupPK);
-        } catch (SharingRegistryException e) {
-            String message =
-                    String.format("Error while checking if group exists: domainId=%s, groupId=%s", domainId, groupId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error checking if group exists: domainId=%s, groupId=%s", domainId, groupId);
     }
 
     public boolean deleteGroup(String domainId, String groupId) throws SharingRegistryException {
-        try {
+        ServiceUtils.executeVoid(() -> {
             UserGroupPK userGroupPK = new UserGroupPK();
             userGroupPK.setGroupId(groupId);
             userGroupPK.setDomainId(domainId);
             userGroupService.delete(userGroupPK);
-            return true;
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while deleting group: domainId=%s, groupId=%s", domainId, groupId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error deleting group: domainId=%s, groupId=%s", domainId, groupId);
+        return true;
     }
 
     public UserGroup getGroup(String domainId, String groupId) throws SharingRegistryException {
-        try {
+        return ServiceUtils.execute(() -> {
             UserGroupPK userGroupPK = new UserGroupPK();
             userGroupPK.setGroupId(groupId);
             userGroupPK.setDomainId(domainId);
             return userGroupService.get(userGroupPK);
-        } catch (SharingRegistryException e) {
-            String message = String.format("Error while getting group: domainId=%s, groupId=%s", domainId, groupId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error getting group: domainId=%s, groupId=%s", domainId, groupId);
     }
 
     public List<UserGroup> getGroups(String domain, int offset, int limit) throws SharingRegistryException {
-        try {
+        return ServiceUtils.execute(() -> {
             HashMap<String, String> filters = new HashMap<>();
             filters.put(DBConstants.UserGroupTable.DOMAIN_ID, domain);
-            // Only return groups with MULTI_USER cardinality which is the only type of cardinality allowed for client
-            // created groups
             filters.put(DBConstants.UserGroupTable.GROUP_CARDINALITY, GroupCardinality.MULTI_USER.name());
             return userGroupService.select(null, filters, offset, limit);
-        } catch (SharingRegistryException e) {
-            String message =
-                    String.format("Error while getting groups: domain=%s, offset=%d, limit=%d", domain, offset, limit);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error getting groups: domain=%s, offset=%d, limit=%d", domain, offset, limit);
     }
 
     public boolean addUsersToGroup(String domainId, List<String> userIds, String groupId)
@@ -513,7 +457,7 @@ public class SharingRegistryService {
             }
             // remove the new owner as Admin if present
             if (hasAdminAccess(domainId, groupId, newOwnerId)) {
-                removeGroupAdmins(domainId, groupId, Arrays.asList(newOwnerId));
+                removeGroupAdmins(domainId, groupId, List.of(newOwnerId));
             }
 
             UserGroupPK userGroupPK = new UserGroupPK();
@@ -601,67 +545,35 @@ public class SharingRegistryService {
     }
 
     public boolean hasAdminAccess(String domainId, String groupId, String adminId) throws SharingRegistryException {
-        try {
+        return ServiceUtils.executeBool(() -> {
             GroupAdminPK groupAdminPK = new GroupAdminPK();
             groupAdminPK.setGroupId(groupId);
             groupAdminPK.setAdminId(adminId);
             groupAdminPK.setDomainId(domainId);
-
-            if (groupAdminService.get(groupAdminPK) != null) return true;
-            return false;
-        } catch (SharingRegistryException e) {
-            String message = String.format(
-                    "Error while checking admin access: domainId=%s, groupId=%s, adminId=%s",
-                    domainId, groupId, adminId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+            return groupAdminService.get(groupAdminPK) != null;
+        }, SharingRegistryException.class, "Error checking admin access: domainId=%s, groupId=%s, adminId=%s", domainId, groupId, adminId);
     }
 
     public boolean hasOwnerAccess(String domainId, String groupId, String ownerId) throws SharingRegistryException {
-        try {
+        return ServiceUtils.executeBool(() -> {
             UserGroupPK userGroupPK = new UserGroupPK();
             userGroupPK.setGroupId(groupId);
             userGroupPK.setDomainId(domainId);
-            UserGroup getGroup = userGroupService.get(userGroupPK);
-
-            if (getGroup.getOwnerId().equals(ownerId)) return true;
-            return false;
-        } catch (SharingRegistryException e) {
-            String message = String.format(
-                    "Error while checking owner access: domainId=%s, groupId=%s, ownerId=%s",
-                    domainId, groupId, ownerId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+            UserGroup group = userGroupService.get(userGroupPK);
+            return group.getOwnerId().equals(ownerId);
+        }, SharingRegistryException.class, "Error checking owner access: domainId=%s, groupId=%s, ownerId=%s", domainId, groupId, ownerId);
     }
 
     public List<User> getGroupMembersOfTypeUser(String domainId, String groupId, int offset, int limit)
             throws SharingRegistryException {
-        try {
-            // TODO limit offset
-            List<User> groupMemberUsers = groupMembershipService.getAllChildUsers(domainId, groupId);
-            return groupMemberUsers;
-        } catch (SharingRegistryException e) {
-            String message = String.format(
-                    "Error while getting group members of type user: domainId=%s, groupId=%s", domainId, groupId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        return ServiceUtils.execute(() -> groupMembershipService.getAllChildUsers(domainId, groupId),
+            SharingRegistryException.class, "Error getting group members of type user: domainId=%s, groupId=%s", domainId, groupId);
     }
 
     public List<UserGroup> getGroupMembersOfTypeGroup(String domainId, String groupId, int offset, int limit)
             throws SharingRegistryException {
-        try {
-            // TODO limit offset
-            List<UserGroup> groupMemberGroups = groupMembershipService.getAllChildGroups(domainId, groupId);
-            return groupMemberGroups;
-        } catch (SharingRegistryException e) {
-            String message = String.format(
-                    "Error while getting group members of type group: domainId=%s, groupId=%s", domainId, groupId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        return ServiceUtils.execute(() -> groupMembershipService.getAllChildGroups(domainId, groupId),
+            SharingRegistryException.class, "Error getting group members of type group: domainId=%s, groupId=%s", domainId, groupId);
     }
 
     public boolean addChildGroupsToParentGroup(String domainId, List<String> childIds, String groupId)
@@ -689,31 +601,19 @@ public class SharingRegistryService {
 
     public boolean removeChildGroupFromParentGroup(String domainId, String childId, String groupId)
             throws SharingRegistryException {
-        try {
+        ServiceUtils.executeVoid(() -> {
             GroupMembershipPK groupMembershipPK = new GroupMembershipPK();
             groupMembershipPK.setParentId(groupId);
             groupMembershipPK.setChildId(childId);
             groupMembershipPK.setDomainId(domainId);
             groupMembershipService.delete(groupMembershipPK);
-            return true;
-        } catch (SharingRegistryException e) {
-            String message = String.format(
-                    "Error while removing child group from parent group: domainId=%s, childId=%s, groupId=%s",
-                    domainId, childId, groupId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        }, SharingRegistryException.class, "Error removing child group from parent: domainId=%s, childId=%s, groupId=%s", domainId, childId, groupId);
+        return true;
     }
 
     public List<UserGroup> getAllMemberGroupsForUser(String domainId, String userId) throws SharingRegistryException {
-        try {
-            return groupMembershipService.getAllMemberGroupsForUser(domainId, userId);
-        } catch (SharingRegistryException e) {
-            String message = String.format(
-                    "Error while getting all member groups for user: domainId=%s, userId=%s", domainId, userId);
-            logger.error(message, e);
-            throw new SharingRegistryException(message);
-        }
+        return ServiceUtils.execute(() -> groupMembershipService.getAllMemberGroupsForUser(domainId, userId),
+            SharingRegistryException.class, "Error getting member groups for user: domainId=%s, userId=%s", domainId, userId);
     }
 
     /**
@@ -971,7 +871,7 @@ public class SharingRegistryService {
             sharingService.create(newSharing);
 
             // creating records for inherited permissions
-            if (entity.getParentEntityId() != null && entity.getParentEntityId() != "") {
+            if (entity.getParentEntityId() != null && !entity.getParentEntityId().isEmpty()) {
                 addCascadingPermissionsForEntity(entity);
             }
 
@@ -1026,7 +926,7 @@ public class SharingRegistryService {
             // check if parent entity changed and re-add inherited permissions
             if (!Objects.equals(oldEntity.getParentEntityId(), entity.getParentEntityId())) {
                 logger.debug("Parent entity changed for {}, updating inherited permissions", entity.getEntityId());
-                if (oldEntity.getParentEntityId() != null && oldEntity.getParentEntityId() != "") {
+                if (oldEntity.getParentEntityId() != null && !oldEntity.getParentEntityId().isEmpty()) {
                     logger.debug(
                             "Removing inherited permissions from {} that were inherited from parent {}",
                             entity.getEntityId(),
@@ -1034,7 +934,7 @@ public class SharingRegistryService {
                     sharingService.removeAllIndirectCascadingPermissionsForEntity(
                             entity.getDomainId(), entity.getEntityId());
                 }
-                if (entity.getParentEntityId() != null && entity.getParentEntityId() != "") {
+                if (entity.getParentEntityId() != null && !entity.getParentEntityId().isEmpty()) {
                     // re-add INDIRECT_CASCADING permissions
                     logger.debug(
                             "Adding inherited permissions to {} that are inherited from parent {}",
@@ -1235,8 +1135,8 @@ public class SharingRegistryService {
 
             if (cascadePermission) {
                 // Adding permission for the specified users/groups for all child entities
-                entityService.getChildEntities(domainId, entityId).stream().forEach(e -> temp.addLast(e));
-                while (temp.size() > 0) {
+                entityService.getChildEntities(domainId, entityId).forEach(temp::addLast);
+                while (!temp.isEmpty()) {
                     Entity entity = temp.pop();
                     String childEntityId = entity.getEntityId();
                     for (String userId : groupOrUserList) {
@@ -1317,14 +1217,15 @@ public class SharingRegistryService {
             // check whether the user has permission directly or indirectly
             List<GroupMembership> parentMemberships =
                     groupMembershipService.getAllParentMembershipsForChild(domainId, userId);
-            List<String> groupIds = new ArrayList<>();
-            parentMemberships.stream().forEach(pm -> groupIds.add(pm.getParentId()));
+            List<String> groupIds = new ArrayList<>(parentMemberships.stream()
+                    .map(GroupMembership::getParentId)
+                    .toList());
             groupIds.add(userId);
             return sharingService.hasAccess(
                     domainId,
                     entityId,
                     groupIds,
-                    Arrays.asList(permissionTypeId, permissionTypeService.getOwnerPermissionTypeIdForDomain(domainId)));
+                    List.of(permissionTypeId, permissionTypeService.getOwnerPermissionTypeIdForDomain(domainId)));
         } catch (SharingRegistryException e) {
             String message = String.format(
                     "Error while checking user access: domainId=%s, userId=%s, entityId=%s, permissionTypeId=%s",
@@ -1393,7 +1294,7 @@ public class SharingRegistryService {
         Field[] newEntityFields = newEntity.getClass().getDeclaredFields();
         HashMap<String, Object> newHT = fieldsToHT(newEntityFields, newEntity);
 
-        Class oldEntityClass = oldEntity.getClass();
+        Class<?> oldEntityClass = oldEntity.getClass();
         Field[] oldEntityFields = oldEntityClass.getDeclaredFields();
 
         for (Field field : oldEntityFields) {
@@ -1427,7 +1328,7 @@ public class SharingRegistryService {
                     hashtable.put(field.getName(), field.get(obj));
                 }
             } catch (IllegalAccessException e) {
-                e.printStackTrace();
+                logger.debug("Could not access field: {}", field.getName(), e);
             }
         }
         return hashtable;
